# IndustrialBoar

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  format.sh  init.sh  run.sh  surpress_leaks.txt  test.sh  vcpkg.json
.github/workflows/: format.yml  sonarcloud.yml
assets/aseprite_files/: belt.aseprite  iron.aseprite
src/game/: assert.hpp  game_context.hpp  log.hpp  main.cpp  screen_renderer.hpp  sdl_sdlr_screen_renderer.hpp
src/lib/: __placeholder__.cpp  game_context.hpp  log.hpp  screen_renderer.hpp  sdl_sdlr_screen_renderer.hpp
src/lib/core/: camera.cpp  camera.hpp  constants.hpp  entity_manager.cpp  entity_manager.hpp  game_context.hpp  input.hpp  perlim_noise.cpp  perlim_noise.hpp  scene.cpp  scene.hpp  world_generator.cpp  world_generator.hpp
src/lib/entities/: belt.cpp  belt.hpp  building.hpp  resource.cpp  resource.hpp  tile.cpp  tile.hpp
src/lib/graphics/: game_context.hpp  graphic_entity.hpp  imgui_handler.cpp  imgui_handler.hpp  screen_renderer.hpp  sdl_sdlr_screen_renderer.hpp
src/lib/scenes/: main_menu.hpp  world_scene.cpp  world_scene.hpp
src/lib/utils/: assert.cpp  assert.hpp  log.cpp  log.hpp  math.hpp  print_utils.hpp  time_utils.cpp  time_utils.hpp
